DataAnnotations and HTTPGET "Zutatenkategorien" request (api/values/zutatenkategorien)

--- a/Automatisches_Kochbuch/Automatisches_Kochbuch.csproj
+++ b/Automatisches_Kochbuch/Automatisches_Kochbuch.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200417193504_Basics.cs" />
+    <Compile Remove="Migrations\20200417193504_Basics.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
