Variante 2 mit IDataContext wurde erstellt

--- a/Automatisches_Kochbuch/appsettings.json
+++ b/Automatisches_Kochbuch/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionString": {
+    "Automatisches_Kochbuch": "DataSource=localhost;DataBase=automatisches_kochbuch;UserID=root;"
+  },
   "AllowedHosts": "*"
 }
