--- a/Automatisches_Kochbuch/Automatisches_Kochbuch.csproj
+++ b/Automatisches_Kochbuch/Automatisches_Kochbuch.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Laurin\Documents\4.Klasse\SOF_ANP\Semesterprojekt_mit_WebServices\Kochbuch_2019_RICHTIG\Automatisches_Kochbuch\Automatisches_Kochbuch.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\Daniel Romen\Source\Repos\Automatisches_Kochbuch\Automatisches_Kochbuch\Automatisches_Kochbuch.xml</DocumentationFile>
     <WarningLevel>3</WarningLevel>
   </PropertyGroup>
 
